added admin-auth-store, admin-auth-reducer, admin-auth-selector, admin-auth-actions

--- a/frontend/src/app/view/admin-login-block/ui/admin-login-form-ui/admin-login-form-ui.component.html
+++ b/frontend/src/app/view/admin-login-block/ui/admin-login-form-ui/admin-login-form-ui.component.html
@@ -13,7 +13,7 @@
   </mat-form-field>
 
   <button mat-raised-button color="primary"
-          [disabled]="formGroup.invalid || !!formError">
+          [disabled]="disabled || formGroup.invalid || !!formError">
     Login
   </button>
 
