--- a/frontend/src/app/view/admin-login-block/blocks/admin-login-block/admin-login-block.component.html
+++ b/frontend/src/app/view/admin-login-block/blocks/admin-login-block/admin-login-block.component.html
@@ -1,5 +1,7 @@
 <app-admin-login-form-ui
-  [formError]="serverError"
+  *ngIf="loaded$ | async"
+  [formError]="serverError$ | async"
+  [disabled]="loading$ | async"
   (login)="onLogin($event)"
 ></app-admin-login-form-ui>
 
