--- a/frontend/src/app/pages/home/home/home.component.html
+++ b/frontend/src/app/pages/home/home/home.component.html
@@ -1,2 +1,7 @@
+<ul>
+  <li><a routerLink="">Home page</a></li>
+  <li><a routerLink="admin/auth/login">Admin Login page</a></li>
+  <li><a routerLink="admin/dashboard">Admin Dashboard Page</a></li>
+  <li><a routerLink="32rfrg">Not Found Page</a></li>
+</ul>
 <p>home works!</p>
-
