--- a/frontend/src/app/pages/admin/pages/admin-page/admin-page.component.html
+++ b/frontend/src/app/pages/admin/pages/admin-page/admin-page.component.html
@@ -1,6 +1,6 @@
 <div class="grid-container">
   <app-admin-header-block class="header"></app-admin-header-block>
-  <nav class="nav">NAV</nav>
+  <app-admin-nav-block class="nav"></app-admin-nav-block>
   <main class="main">
     <router-outlet></router-outlet>
   </main>
